change resume name

--- a/automate-latex-resume/mmayer.tex
+++ b/automate-latex-resume/mmayer.tex
@@ -75,7 +75,7 @@
 \addbibresource{sample.bib}
 
 \begin{document}
-\name{Marissa Mayer}
+\name{Marissa Mayer ABC}
 \tagline{Business Woman \& Proud Geek}
 % Cropped to square from https://en.wikipedia.org/wiki/Marissa_Mayer#/media/File:Marissa_Mayer_May_2014_(cropped).jpg, CC-BY 2.0
 %% You can add multiple photos on the left or right
